--- a/scriptSynth/scriptSynth.xcodeproj/xcshareddata/xcschemes/ScriptSynth Debug.xcscheme
+++ b/scriptSynth/scriptSynth.xcodeproj/xcshareddata/xcschemes/ScriptSynth Debug.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "scriptSynth.app"
-               BlueprintName = "scriptSynth"
-               ReferencedContainer = "container:scriptSynth.xcodeproj">
+               BuildableName = "ScriptSynth.app"
+               BlueprintName = "ScriptSynth"
+               ReferencedContainer = "container:ScriptSynth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "scriptSynth.app"
-            BlueprintName = "scriptSynth"
-            ReferencedContainer = "container:scriptSynth.xcodeproj">
+            BuildableName = "ScriptSynth.app"
+            BlueprintName = "ScriptSynth"
+            ReferencedContainer = "container:ScriptSynth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -48,14 +48,13 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "scriptSynth.app"
-            BlueprintName = "scriptSynth"
-            ReferencedContainer = "container:scriptSynth.xcodeproj">
+            BuildableName = "ScriptSynth.app"
+            BlueprintName = "ScriptSynth"
+            ReferencedContainer = "container:ScriptSynth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -67,14 +66,13 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "scriptSynth.app"
-            BlueprintName = "scriptSynth"
-            ReferencedContainer = "container:scriptSynth.xcodeproj">
+            BuildableName = "ScriptSynth.app"
+            BlueprintName = "ScriptSynth"
+            ReferencedContainer = "container:ScriptSynth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
